data/derived/comb/progs/unify/prog5554.ml.out
Characters 49-63:
  let fixpoint (f,b) = wwhile ( (let f2 x = f x in (f x, f x = b)), b);;
                                                   ^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
